--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="card">
-                                    <div class="card-header">勝率分布（全体）</div>
+                                    <div class="card-header">プレイヤー別勝率</div>
                                     <div class="card-body">
                                         <div class="chart-container">
                                             <canvas id="winRateChart"></canvas>
@@ -163,16 +163,7 @@
                                 <div class="table-responsive">
                                     <table class="table table-hover" id="playerStatsTable">
                                         <thead>
-                                            <tr>
-                                                <th>プレイヤー名</th>
-                                                <th>ゲーム数</th>
-                                                <th>勝利数</th>
-                                                <th>勝率</th>
-                                                <th>生存率</th>
-                                                <th>Impostor勝率</th>
-                                                <th>Crewmate勝率</th>
-                                                <th>その他ロール勝率</th>
-                                            </tr>
+                                            <!-- ヘッダーはscript.jsで動的生成 -->
                                         </thead>
                                         <tbody id="playerStatsBody"></tbody>
                                     </table>
