ゲーム一覧に役職情報を追加、表示順を統一
機能追加:
- ゲーム一覧に「役職情報」列を追加
- メインロールとサブロール両方を表示
- 役職ごとの人数を集計表示
- 表示順をallRoles配列の順序に統一

表示形式例:
- Impostor(Scout): 1, Crewmate(Engineer, Guardian): 2

改善:
- すべてのゲームで役職の表示順序が一貫性を持つ
- サブロールがない場合は括弧は表示されない

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
                                                 <th>勝者チーム</th>
                                                 <th>ゲーム時間</th>
                                                 <th>参加プレイヤー</th>
+                                                <th>役職情報</th>
                                             </tr>
                                         </thead>
                                         <tbody id="gamesBody"></tbody>
