--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
                                     <div class="card-header">🏆 勝利数ランキング</div>
                                     <div class="card-body">
                                         <ol id="winsRanking" style="list-style: none; padding: 0"></ol>
+                                        <div class="chart-container" style="max-width: 300px; margin: 2rem auto">
+                                            <canvas id="winsRankingChart"></canvas>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -228,6 +231,9 @@
                                     <div class="card-header">⭐ 勝率ランキング（3ゲーム以上）</div>
                                     <div class="card-body">
                                         <ol id="winRateRanking" style="list-style: none; padding: 0"></ol>
+                                        <div class="chart-container" style="max-width: 300px; margin: 2rem auto">
+                                            <canvas id="winRateRankingChart"></canvas>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -265,13 +271,14 @@
                                     <table class="table table-hover table-sm" id="gamesTable">
                                         <thead>
                                             <tr>
-                                                <th>時刻</th>
                                                 <th>マップ</th>
                                                 <th>プレイヤー数</th>
                                                 <th>勝者チーム</th>
+                                                <th>勝利メンバー</th>
                                                 <th>ゲーム時間</th>
                                                 <th>参加プレイヤー</th>
                                                 <th>役職情報</th>
+                                                <th>時刻</th>
                                             </tr>
                                         </thead>
                                         <tbody id="gamesBody"></tbody>
