UIレイアウト整理とロール分析グラフの改善
概要:
- タブナビゲーションを整理（時系列タブとランキングタブを削除）
- ランキング機能を概要タブに統合
- ロール別勝率分析を円グラフ化
- テーブルヘッダーを明確化

変更内容:

【タブナビゲーションの整理】
- 時系列タブ削除（ランキング機能で十分）
- ランキングタブ削除（概要タブと統合）
- 概要タブにランキング機能を統合
  * 勝利数ランキング（円グラフ付き）
  * 勝率ランキング（円グラフ付き、3ゲーム以上）

【ロール別勝率分析の改善】
- 棒グラフ  円グラフ（ドーナツ型）に変更
- 凡例に「ロール名 (勝利数/ゲーム数)」を表示
- ホバーで「ロール名: 勝率 %」を表示
- Impostor（赤）、Crewmate（緑）、その他（シアン）で色分け

【テーブルの改善】
- ゲーム一覧の「時刻」ヘッダーを「開始時刻」に変更

【コード最適化】
- renderWinRateChart() 関数を削除
- renderMapStatsChart() 関数を削除
- renderCharts() の呼び出しを最適化

【最終的なタブ構成】
-  概要：勝利数と勝率のランキング
-  プレイヤー統計：全プレイヤーの詳細成績表
-  ロール分析：ロール別勝率（円グラフ）
-  ゲーム一覧：全ゲームのログ表

README.md v1.4に更新

--- a/index.html
+++ b/index.html
@@ -122,28 +122,6 @@
                         </button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button
-                            class="nav-link"
-                            id="timeline-tab"
-                            data-bs-toggle="tab"
-                            data-bs-target="#timeline"
-                            role="tab"
-                        >
-                            📈 時系列
-                        </button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button
-                            class="nav-link"
-                            id="ranking-tab"
-                            data-bs-toggle="tab"
-                            data-bs-target="#ranking"
-                            role="tab"
-                        >
-                            🏆 ランキング
-                        </button>
-                    </li>
-                    <li class="nav-item" role="presentation">
                         <button class="nav-link" id="roles-tab" data-bs-toggle="tab" data-bs-target="#roles" role="tab">
                             🎯 ロール分析
                         </button>
@@ -158,62 +136,6 @@
                 <div class="tab-content mt-4">
                     <!-- 概要タブ -->
                     <div class="tab-pane fade show active" id="overview" role="tabpanel">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="card">
-                                    <div class="card-header">プレイヤー別勝率</div>
-                                    <div class="card-body">
-                                        <div class="chart-container">
-                                            <canvas id="winRateChart"></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="card">
-                                    <div class="card-header">マップ別統計</div>
-                                    <div class="card-body">
-                                        <div class="chart-container">
-                                            <canvas id="mapStatsChart"></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- プレイヤー統計タブ -->
-                    <div class="tab-pane fade" id="players" role="tabpanel">
-                        <div class="card">
-                            <div class="card-header">プレイヤー別統計</div>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table table-hover" id="playerStatsTable">
-                                        <thead>
-                                            <!-- ヘッダーはscript.jsで動的生成 -->
-                                        </thead>
-                                        <tbody id="playerStatsBody"></tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- 時系列タブ -->
-                    <div class="tab-pane fade" id="timeline" role="tabpanel">
-                        <div class="card">
-                            <div class="card-header">時系列ゲーム結果</div>
-                            <div class="card-body">
-                                <div class="chart-container">
-                                    <canvas id="timelineChart"></canvas>
-                                </div>
-                                <div id="timelineInfo" class="mt-3"></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- ランキングタブ -->
-                    <div class="tab-pane fade" id="ranking" role="tabpanel">
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="card">
@@ -235,6 +157,23 @@
                                             <canvas id="winRateRankingChart"></canvas>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- プレイヤー統計タブ -->
+                    <div class="tab-pane fade" id="players" role="tabpanel">
+                        <div class="card">
+                            <div class="card-header">プレイヤー別統計</div>
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table class="table table-hover" id="playerStatsTable">
+                                        <thead>
+                                            <!-- ヘッダーはscript.jsで動的生成 -->
+                                        </thead>
+                                        <tbody id="playerStatsBody"></tbody>
+                                    </table>
                                 </div>
                             </div>
                         </div>
@@ -278,7 +217,7 @@
                                                 <th>ゲーム時間</th>
                                                 <th>参加プレイヤー</th>
                                                 <th>役職情報</th>
-                                                <th>時刻</th>
+                                                <th>開始時刻</th>
                                             </tr>
                                         </thead>
                                         <tbody id="gamesBody"></tbody>
