--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <p class="mb-2"><strong>game_history.jsonlをここにドラッグ&ドロップ</strong></p>
                         <p class="text-muted">または下のボタンをクリックして選択</p>
                         <input type="file" id="fileInput" accept=".jsonl" style="display: none" />
-                        <button class="btn btn-primary mt-3" onclick="document.getElementById('fileInput').click()">
+                        <button class="btn btn-primary mt-3" id="selectFileBtn">
                             ファイルを選択
                         </button>
                     </div>
@@ -86,10 +86,10 @@
                                     <option value="168">直近7日</option>
                                     <option value="720">直近30日</option>
                                 </select>
-                                <button class="btn btn-primary" onclick="applyFilters()" style="flex: 1">
+                                <button class="btn btn-primary" id="applyFiltersBtn" style="flex: 1">
                                     フィルターを適用
                                 </button>
-                                <button class="btn btn-secondary" onclick="clearFilters()" style="flex: 1">
+                                <button class="btn btn-secondary" id="clearFiltersBtn" style="flex: 1">
                                     リセット
                                 </button>
                             </div>
