--- a/index.html
+++ b/index.html
@@ -238,6 +238,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card mt-4">
+                            <div class="card-header">ロール別プレイ回数</div>
+                            <div class="card-body">
+                                <p class="text-muted" style="font-size: 0.9rem">
+                                    各プレイヤーがロールごとに参加したゲーム数を一覧表示します。フィルター適用後の結果に連動します。
+                                </p>
+                                <div class="table-responsive">
+                                    <table class="table table-sm table-striped" id="playerRoleCountsTable">
+                                        <thead></thead>
+                                        <tbody id="playerRoleCountsBody"></tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- ロール分析タブ -->
